--- a/Adaction/src/main/resources/application.properties
+++ b/Adaction/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Adaction
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/example-database
+spring.datasource.url=jdbc:mariadb://localhost:3309/example-database
 spring.datasource.username=user
 spring.datasource.password=mypassword
+server.port=8081
